--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -17,7 +17,7 @@ body {
 div#interface {
   width: 900px;
   background-color: white;
-  margin: -20px auto 10px auto;
+  margin: -20px auto 0px auto;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, .5); 
   padding: 10px;
 }
@@ -28,6 +28,7 @@ p {
 }
 
 a {
+  width: 900px;
   color:#606060;
   text-decoration: none;
 }
